<resources>
    <string name="app_name">eMind</string>
    <string-array name="navigationItems">
        <item>Поиск</item>
        <item>Память</item>
        <item>Добавить</item>
        <item>Избранное</item>
        <item>Настройка</item>
    </string-array>

    <string name="new_note">Новая заметка</string>
    <string name="category_note_label">Категория</string>
    <string name="category_note">Основная</string>


    <string name="itemdoc0">item eMind 0</string>
    <string name="itemdoc1">item eMind 1</string>
    <string name="itemdoc2">item eMind 2</string>
    <string name="itemdoc3">item eMind 3</string>
    <string name="itemdoc4">item eMind 4</string>

    <string name="button_insert_note">Добавить заметку</string>
    <string name="button_insert_task">Создать задачу</string>
    <string name="button_insert_doc">Добавить документ</string>
    <string name="title_change_color">Выбор цвета</string>


</resources>