<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="eventhandler"
            type="com.black.emind.bottomnavibar.BottomSheetMenu"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/item0"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:onClick="@{eventhandler::onClick}"
                    android:orientation="horizontal"
                    android:tag="0">

                    <ImageView
                        android:id="@+id/item_icon0"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="16dp"
                        app:srcCompat="@drawable/ic_favorite" />

                    <TextView
                        android:id="@+id/item_text0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/itemdoc0" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item1"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:onClick="@{eventhandler::onClick}"
                    android:orientation="horizontal"
                    android:tag="1">

                    <ImageView
                        android:id="@+id/item_icon1"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="16dp"
                        app:srcCompat="@drawable/ic_favorite" />

                    <TextView
                        android:id="@+id/item_text1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/itemdoc1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item2"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:onClick="@{eventhandler::onClick}"
                    android:orientation="horizontal"
                    android:tag="2">

                    <ImageView
                        android:id="@+id/item_icon2"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="16dp"
                        app:srcCompat="@drawable/ic_favorite" />

                    <TextView
                        android:id="@+id/item_text2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/itemdoc2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item3"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:onClick="@{eventhandler::onClick}"
                    android:orientation="horizontal"
                    android:tag="3">

                    <ImageView
                        android:id="@+id/item_icon3"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="16dp"
                        app:srcCompat="@drawable/ic_favorite" />

                    <TextView
                        android:id="@+id/item_text3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/itemdoc3" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item4"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:onClick="@{eventhandler::onClick}"
                    android:orientation="horizontal"
                    android:tag="4">

                    <ImageView
                        android:id="@+id/item_icon4"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="16dp"
                        app:srcCompat="@drawable/ic_favorite" />

                    <TextView
                        android:id="@+id/item_text4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/itemdoc4" />
                </LinearLayout>
            </LinearLayout>
            >
        </ScrollView>
    </LinearLayout>
</layout>